--- a/İndex.html
+++ b/İndex.html
@@ -1,117 +1,100 @@
-
+<!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EKitap PDF Arama Sitesi</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 50px;
-            background-color: #f4f4f4;
-        }
-        h1 {
-            text-align: center;
-        }
-        form {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        input[type="text"] {
-            width: 70%;
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        button {
-            padding: 10px 15px;
-            font-size: 16px;
-            margin-left: 10px;
-            border: none;
-            border-radius: 4px;
-            background-color: #007bff;
-            color: white;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        .buttons {
-            margin-top: 20px;
-            display: flex;
-            justify-content: space-around;
-        }
-        a.button-link {
-            text-decoration: none;
-        }
-        .download-btn {
-            background-color: #28a745;
-        }
-        .download-btn:hover {
-            background-color: #1e7e34;
-        }
-    </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Allinonepdf - PDF Arama Motoru</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #f9f9f9;
+    color: #222;
+    margin: 0;
+    padding: 2rem;
+    text-align: center;
+  }
+  h1 {
+    color: #007bff;
+  }
+  input[type="text"] {
+    padding: 0.8rem;
+    width: 60%;
+    max-width: 400px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  button {
+    padding: 0.8rem 1.2rem;
+    margin-left: 0.5rem;
+    background: #007bff;
+    border: none;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+  button:hover {
+    background: #0056b3;
+  }
+  #results {
+    margin-top: 2rem;
+    text-align: left;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #results a {
+    display: block;
+    margin: 0.5rem 0;
+    color: #007bff;
+    text-decoration: none;
+  }
+  #results a:hover {
+    text-decoration: underline;
+  }
+</style>
 </head>
 <body>
-    <h1>EKitap PDF Arama Sitesi</h1>
-    <form id="searchForm" onsubmit="return handleSearch()">
-        <input type="text" id="searchQuery" placeholder="Aramak istediğiniz PDF veya E-kitap..." required />
-        <button type="submit">Ara</button>
-    </form>
 
-    <div class="buttons">
-        <a id="ekitapSite" class="button-link" target="_blank" href="#">
-            <button>Yönlendir: EKitap.site</button>
-        </a>
-        <a id="pdfdriveSite" class="button-link" target="_blank" href="#">
-            <button>Yönlendir: Pdfdrive</button>
-        </a>
-        <a id="mirazSite" class="button-link" target="_blank" href="#">
-            <button>Yönlendir: Mir.az</button>
-        </a>
-    </div>
+<h1>Allinonepdf - PDF Arama Motoru</h1>
 
-    <script>
-        function handleSearch() {
-            const query = encodeURIComponent(document.getElementById('searchQuery').value.trim());
-            if (!query) return false;
+<form id="searchForm">
+  <input type="text" id="query" placeholder="Aramak istediğiniz kelimeyi yazın..." required />
+  <button type="submit">Ara</button>
+</form>
 
-            // URL'leri belirleme
-            const ekitapUrl = \`https://ekitap.site/?s=\${query}\`;
-            const pdfdriveUrl = \`https://www.pdfdrive.com/search?q=\${query}\`;
-            const mirazUrl = \`https://mir.az/search?query=\${query}\`;
+<div id="results"></div>
 
-            // Yönlendirme
-            // Kullanıcının seçim yapmasını sağlayan butonlar veya dropdown ekleyebilirsiniz.
+<script>
+  const siteler = [
+    {name: "Ekitap.link", site: "site:ekitap.link"},
+    {name: "Drivepdf.com", site: "site:drivepdf.com"},
+    {name: "Scribd.com", site: "site:scribd.com"},
+    {name: "Gutenberg.org", site: "site:gutenberg.org"},
+    {name: "Archive.org", site: "site:archive.org"}
+  ];
 
-            // Burada örnek olarak ilk siteye yönlendiriyoruz
-            window.open(ekitapUrl, '_blank');
+  const form = document.getElementById('searchForm');
+  const resultsDiv = document.getElementById('results');
 
-            return false; // Formun submit olmasını engeller
-        }
+  form.addEventListener('submit', function(e) {
+    e.preventDefault();
+    resultsDiv.innerHTML = '';
+    const query = document.getElementById('query').value.trim();
+    if (!query) return;
 
-        // Butonlara tıklandığında farklı sitelere yönlendirme
-        document.getElementById('ekitapSite').onclick = () => {
-            const query = encodeURIComponent(document.getElementById('searchQuery').value.trim());
-            const url = \`https://ekitap.site/?s=\${query}\`;
-            window.open(url, '_blank');
-        };
-        document.getElementById('pdfdriveSite').onclick = () => {
-            const query = encodeURIComponent(document.getElementById('searchQuery').value.trim());
-            const url = \`https://www.pdfdrive.com/search?q=\${query}\`;
-            window.open(url, '_blank');
-        };
-        document.getElementById('mirazSite').onclick = () => {
-            const query = encodeURIComponent(document.getElementById('searchQuery').value.trim());
-            const url = \`https://mir.az/search?query=\${query}\`;
-            window.open(url, '_blank');
-        };
-    </script>
+    siteler.forEach(site => {
+      const url = `https://www.google.com/search?q=${encodeURIComponent(site.site + " filetype:pdf " + query)}`;
+      const a = document.createElement('a');
+      a.href = url;
+      a.target = "_blank";
+      a.rel = "noopener noreferrer";
+      a.textContent = `${site.name} üzerinde '${query}' için PDF ara`;
+      resultsDiv.appendChild(a);
+    });
+  });
+</script>
+
 </body>
 </html>
